--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.51
-  maximum: 6.93
-  average: 6.74
-  UpdateDay: '2022-05-08T15:32:33.440773'
+  minimum: 6.47
+  maximum: 7.72
+  average: 7.17
+  UpdateDay: '2022-05-08T18:31:56.468618'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 41033
+  Rank: 41135
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,25 +55,26 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.49
-  maximum: 26.91
-  average: 14.01
-  UpdateDay: '2022-05-08T12:30:24.768566'
+  minimum: 6.46
+  maximum: 13.98
+  average: 9.24
+  UpdateDay: '2022-05-08T18:30:26.359373'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 37636
+  Rank: 37737
 - name: 101.91.121.247:50004@ss
-  type: ss
   server: 101.91.121.247
+  type: ss
+  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
-  cipher: aes-256-cfb
   password: '4415934295'
+  cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.49
-  maximum: 10.28
-  average: 9.89
-  UpdateDay: '2022-05-08T15:32:32.167857'
+  minimum: 9.48
+  maximum: 13.03
+  average: 11.02
+  UpdateDay: '2022-05-08T18:30:26.369781'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 32977
+  Rank: 33078
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 85.05
-  maximum: 131.25
-  average: 106.4
-  UpdateDay: '2022-05-08T15:32:36.130549'
+  minimum: 60.85
+  maximum: 131.36
+  average: 85.08
+  UpdateDay: '2022-05-08T18:31:56.717225'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 27543
+  Rank: 27610
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -98,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.85
-  maximum: 44.66
-  average: 41.83
-  UpdateDay: '2022-05-08T15:32:35.405625'
+  minimum: 12.25
+  maximum: 48.22
+  average: 33.84
+  UpdateDay: '2022-05-08T18:31:56.556525'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 25957
+  Rank: 26054
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -116,22 +117,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 23893
+  Rank: 23993
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 20089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 21.47
-  maximum: 42.08
-  average: 35.04
-  UpdateDay: '2022-05-08T15:32:35.382691'
+  minimum: 9.84
+  maximum: 48.42
+  average: 34.91
+  UpdateDay: '2022-05-08T18:30:26.447382'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 23199
+  Rank: 23295
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,12 +142,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 90.89
-  maximum: 107.02
-  average: 100.55
-  UpdateDay: '2022-05-08T15:32:36.109908'
+  minimum: 83.3
+  maximum: 99.75
+  average: 92.3
+  UpdateDay: '2022-05-08T18:31:56.739806'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 21377
+  Rank: 21429
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -156,12 +157,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 90.08
-  maximum: 110.02
-  average: 101.76
-  UpdateDay: '2022-05-08T15:32:36.848529'
+  minimum: 82.27
+  maximum: 88.41
+  average: 85.51
+  UpdateDay: '2022-05-08T18:31:56.795887'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 19652
+  Rank: 19664
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -171,12 +172,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.44
-  maximum: 46.43
-  average: 44.22
-  UpdateDay: '2022-05-08T15:32:35.916199'
+  minimum: 38.08
+  maximum: 39.6
+  average: 38.76
+  UpdateDay: '2022-05-08T18:31:56.576685'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 16685
+  Rank: 16773
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -191,22 +192,22 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 15997
+  Rank: 16097
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 138.8
-  maximum: 177.29
-  average: 157.73
-  UpdateDay: '2022-05-08T15:32:38.791760'
+  minimum: 36.67
+  maximum: 51.88
+  average: 46.2
+  UpdateDay: '2022-05-08T18:31:20.612272'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 15947
+  Rank: 16031
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -218,7 +219,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 15792
+  Rank: 15882
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,22 +231,22 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 15063
+  Rank: 15144
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.38
-  maximum: 47.04
-  average: 42.9
-  UpdateDay: '2022-05-08T15:32:35.405919'
+  minimum: 40.0
+  maximum: 44.92
+  average: 41.94
+  UpdateDay: '2022-05-08T18:31:56.578733'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 14050
+  Rank: 14100
 - alterId: 0
   cipher: auto
   http-opts:
@@ -270,7 +271,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 13419
+  Rank: 13449
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -285,7 +286,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 13271
+  Rank: 13336
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -300,7 +301,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 11421
+  Rank: 11507
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -315,22 +316,22 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 11287
+  Rank: 11335
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.0
-  maximum: 49.88
-  average: 43.29
-  UpdateDay: '2022-05-08T15:32:35.879789'
+  minimum: 39.66
+  maximum: 40.69
+  average: 40.15
+  UpdateDay: '2022-05-08T18:31:56.579583'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 11238
+  Rank: 11290
 proxy-groups:
 - name: PG-default
   type: fallback
