--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.01
   UpdateDay: '2022-05-09T06:32:04.613116'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 42442
+  Rank: 42542
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 14.92
   UpdateDay: '2022-05-09T06:30:26.872824'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 39035
+  Rank: 39135
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   type: ss
@@ -74,7 +74,7 @@ proxies:
   average: 13.79
   UpdateDay: '2022-05-09T06:30:26.869936'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 34305
+  Rank: 34400
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -89,7 +89,7 @@ proxies:
   average: 59.92
   UpdateDay: '2022-05-09T06:32:05.232698'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 28505
+  Rank: 28575
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -104,7 +104,7 @@ proxies:
   average: 36.67
   UpdateDay: '2022-05-09T06:32:04.917055'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 27260
+  Rank: 27350
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 24801
+  Rank: 24896
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -132,7 +132,7 @@ proxies:
   average: 32.04
   UpdateDay: '2022-05-09T06:30:26.916649'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 24440
+  Rank: 24525
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -147,7 +147,7 @@ proxies:
   average: 52.98
   UpdateDay: '2022-05-09T06:30:33.735060'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 22330
+  Rank: 22430
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -162,7 +162,7 @@ proxies:
   average: 118.43
   UpdateDay: '2022-05-09T06:32:06.508620'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 20023
+  Rank: 20057
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -177,7 +177,7 @@ proxies:
   average: 38.42
   UpdateDay: '2022-05-09T06:32:05.085392'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 17962
+  Rank: 18050
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -192,7 +192,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 17202
+  Rank: 17302
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -204,7 +204,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 16924
+  Rank: 17019
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -219,7 +219,7 @@ proxies:
   average: 83.47
   UpdateDay: '2022-05-09T06:32:07.477446'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 16558
+  Rank: 16594
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 15681
+  Rank: 15705
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -246,7 +246,7 @@ proxies:
   average: 43.1
   UpdateDay: '2022-05-09T06:32:04.944892'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 14617
+  Rank: 14665
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -261,7 +261,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 14547
+  Rank: 14647
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,7 +286,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14005
+  Rank: 14055
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -301,7 +301,7 @@ proxies:
   average: 40.32
   UpdateDay: '2022-05-09T06:32:05.091960'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 12228
+  Rank: 12328
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 12143
-- name: 45.9.10.103:443@trojan
-  server: 45.9.10.103
+  Rank: 12167
+- name: api.tcpbbr.net:443@trojan
+  server: api.tcpbbr.net
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
-  password: WpfQAbO2wg
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 160.41
-  maximum: 164.63
-  average: 162.13
-  UpdateDay: '2022-03-30T11:21:53.634848'
-  PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 11965
+  minimum: 37.88
+  maximum: 40.45
+  average: 39.06
+  UpdateDay: '2022-05-09T06:30:30.138260'
+  PFirstFoundDay: '2022-03-29T09:34:31.613124'
+  Rank: 12032
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -358,7 +358,7 @@ proxy-groups:
   - 35.153.162.49:27080@vmess
   - ssl.tcpbbr.net:443@trojan
   - zgao.shop:443@trojan
-  - 45.9.10.103:443@trojan
+  - api.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
